<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/addTask"
        android:icon="@drawable/ic_edit_hive"
        android:title="Add reminder task"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/addNewHive"
        android:icon="@drawable/ic_inspection_2_24"
        android:title="@string/add_new_hive_btn"
        app:showAsAction="never" />

    <item
        android:id="@+id/yourHives"
        android:icon="@drawable/ic_hives_list_24"
        android:title="@string/view_all_hives"
        app:showAsAction="never" />

    <item
        android:id="@+id/addSting"
        android:icon="@drawable/ic_sting_24"
        android:title="@string/add_sting_button"
        app:showAsAction="never" />

    <item
        android:id="@+id/meteoConditions"
        android:icon="@drawable/ic_weather_24"
        android:title="@string/current_weather_conditions"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/signOutMenu"
        android:title="Sign out"
        app:showAsAction="never"/>



</menu>