<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_main_background"
            android:padding="20dp"
            tools:context=".activities.AddCoordFragment">


            <TextView
                android:id="@+id/hiveStatus_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/hive_status"
                android:textColor="@color/yellowText"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/queenAgeEditText_update" />

            <EditText
                android:id="@+id/hiveNameEditText_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/hive_name_hint_text"
                android:maxLength="8"
                android:textColor="@color/white"
                android:textColorHint="@color/greyText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/queenAgeEditText_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/queen_age_hint_text"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/white"
                android:textColorHint="@color/greyText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hiveNameEditText_update" />

            <RadioGroup
                android:id="@+id/statusRadioGroup_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/hiveStatus_update"
                app:layout_constraintTop_toBottomOf="@+id/hiveStatus_update">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/strongRadioBtn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/hive_status_radio_btn_strong"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hiveStatus_update" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/weakRadioBtn_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:clickable="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/hive_status_radio_btn_weak"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/strongRadioBtn_update" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/nucleusRadioButon_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:clickable="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/hive_status_radio_btn_nucelus"
                    android:layout_marginBottom="100dp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weakRadioBtn_update" />


            </RadioGroup>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/updateHiveBtn_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:alpha=".8"
                android:visibility="visible"
                android:background="@drawable/buttons"
                android:text="@string/update_hive_button"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
