<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_main_background"
            android:padding="10dp"
            tools:context="..view.EditHiveFragment">


            <RadioGroup
                android:id="@+id/queenColorRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/queenColor">


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/whiteQueeColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="white"
                    android:textColor="@color/white" />


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/greenQueenColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:text="green"
                    android:textColor="@android:color/holo_green_light" />


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/redQueenColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:text="red"
                    android:textColor="@android:color/holo_red_light" />


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/blueQueenColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:text="blue"
                    android:textColor="@android:color/holo_blue_light" />


                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/yelllowQueenColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="yellow"
                    android:textColor="@color/yellowText" />


            </RadioGroup>

            <TextView
                android:id="@+id/hiveStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:padding="5dp"
                android:text="@string/hive_status"
                android:textColor="@color/yellowText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/statusRadioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hiveNumberEditText" />

            <EditText
                android:id="@+id/hiveNumberEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:drawableEnd="@drawable/ic_edit_hive"
                android:hint="@string/hive_name_hint_text"
                android:inputType="numberSigned"
                android:maxLength="9"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/greyText"
                app:layout_constraintBottom_toTopOf="@+id/hiveStatus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/statusRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/queenColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hiveStatus">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/strongRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:clickable="true"
                    android:text="@string/hive_status_radio_btn_strong"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hiveStatus" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/weakRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:clickable="true"
                    android:text="@string/hive_status_radio_btn_weak"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/strongRadioBtn" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/nucleusRadioButon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:clickable="true"
                    android:text="@string/hive_status_radio_btn_nucelus"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/weakRadioBtn" />


            </RadioGroup>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/editHive"
                android:layout_width="392dp"
                android:layout_height="wrap_content"
                android:background="@color/yellowText"
                android:text="@string/update_hive_button"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/queenColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-light"
                android:padding="10dp"
                android:text="Queen color"
                android:textColor="@color/yellowText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/queenColorRadioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusRadioGroup" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
